[gd_scene load_steps=12 format=2]

[ext_resource path="res://levels/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://level_connections/57-58.tres" type="Resource" id=3]
[ext_resource path="res://world/TheSystem.tscn" type="PackedScene" id=4]
[ext_resource path="res://world/TileMap.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/Level_58.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 50 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 27 )

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14, 1 )

[sub_resource type="Animation" id=5]
resource_name = "gameover"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_to_game_over"
} ]
}

[node name="Level_58" instance=ExtResource( 1 )]
z_index = 5
script = ExtResource( 6 )

[node name="TileMap" parent="." index="0"]
tile_data = PoolIntArray( 0, 6, 0, 1, 6, 1, 2, 6, 1, 3, 6, 1, 4, 6, 1, 5, 6, 1, 6, 6, 1, 7, 6, 1, 8, 6, 5, 9, 6, 196609, 10, 6, 196609, 11, 6, 196609, 12, 6, 196609, 13, 6, 196609, 14, 6, 196609, 15, 6, 196609, 16, 6, 196609, 17, 6, 196609, 18, 6, 196609, 19, 6, 196610, 20, 4, 0, 21, 4, 0, 22, 4, 0, 23, 4, 0, 24, 4, 0, 25, 4, 0, 26, 4, 0, 27, 4, 0, 28, 4, 0, 65536, 6, 65536, 65537, 6, 65537, 65538, 6, 65541, 65539, 6, 131073, 65540, 6, 131073, 65541, 6, 131073, 65542, 6, 131073, 65543, 6, 131073, 65544, 6, 131074, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 4, 0, 65551, 4, 0, 65552, 4, 0, 65553, 4, 0, 65554, 4, 0, 65555, 4, 0, 65556, 4, 0, 65557, 4, 0, 65558, 4, 0, 65559, 6, 196611, 65563, 4, 0, 65564, 4, 0, 131072, 6, 65536, 131073, 6, 65541, 131074, 6, 131074, 131086, 6, 196611, 131087, 4, 0, 131088, 4, 0, 131089, 4, 0, 131097, 4, 0, 131098, 4, 0, 131100, 4, 0, 196608, 6, 131072, 196609, 6, 65543, 196624, 4, 0, 196625, 6, 196611, 196631, 4, 0, 196632, 4, 0, 196636, 4, 0, 262145, 6, 131075, 262160, 6, 196611, 262161, 4, 0, 262162, 6, 196611, 262165, 4, 0, 262166, 4, 0, 262170, 4, 0, 262172, 4, 0, 327691, 6, 0, 327692, 6, 2, 327697, 4, 0, 327698, 4, 0, 327699, 4, 0, 327700, 4, 0, 327701, 6, 196611, 327708, 4, 0, 393227, 6, 65540, 393228, 6, 196613, 393229, 6, 196610, 393233, 6, 196608, 393234, 6, 196609, 393235, 6, 196609, 393236, 6, 196610, 393238, 6, 3, 393240, 6, 3, 393244, 4, 0, 458763, 6, 65539, 458764, 4, 0, 458765, 4, 0, 458774, 6, 196612, 458775, 6, 8, 458776, 6, 196616, 458777, 6, 196609, 458778, 6, 6, 458779, 6, 1, 458780, 6, 2, 524288, 4, 0, 524289, 4, 0, 524290, 4, 0, 524291, 6, 4, 524292, 6, 196609, 524293, 6, 196609, 524294, 6, 196609, 524295, 6, 196609, 524296, 6, 196609, 524297, 6, 6, 524298, 6, 1, 524299, 6, 131079, 524302, 4, 0, 524307, 6, 196608, 524308, 6, 8, 524309, 6, 196610, 524311, 6, 131075, 524314, 6, 65540, 524315, 6, 131073, 524316, 6, 65543, 589824, 4, 0, 589825, 6, 0, 589826, 6, 1, 589827, 6, 131079, 589833, 6, 131072, 589834, 6, 131073, 589835, 6, 196613, 589836, 6, 196609, 589837, 6, 196609, 589838, 6, 196610, 589839, 4, 0, 589840, 6, 3, 589844, 6, 131075, 589849, 6, 0, 589850, 6, 131079, 589852, 6, 65539, 655360, 4, 0, 655361, 6, 65536, 655362, 6, 65537, 655363, 6, 65538, 655373, 4, 0, 655374, 4, 0, 655375, 4, 0, 655376, 6, 131075, 655377, 4, 0, 655385, 6, 131072, 655386, 6, 196613, 655387, 6, 196609, 655388, 6, 196615, 720896, 4, 0, 720897, 6, 65536, 720898, 6, 65537, 720899, 6, 65538, 720909, 4, 0, 720910, 6, 0, 720911, 6, 2, 786432, 4, 0, 786433, 6, 65536, 786434, 6, 65537, 786435, 6, 65538, 786444, 6, 4, 786445, 6, 196609, 786446, 6, 196614, 786447, 6, 196613, 786448, 6, 196609, 786449, 6, 7, 786452, 6, 4, 786453, 6, 196610, 851968, 4, 0, 851969, 6, 131072, 851970, 6, 65542, 851971, 6, 131077, 851972, 6, 1, 851973, 6, 2, 851975, 6, 4, 851976, 6, 196609, 851977, 6, 196609, 851978, 6, 196609, 851979, 6, 196609, 851980, 6, 196615, 851985, 6, 196612, 851986, 6, 196609, 851987, 6, 196609, 851988, 6, 196615, 851990, 6, 3, 851994, 6, 4, 851995, 6, 196609, 851996, 6, 7, 917504, 4, 0, 917505, 4, 0, 917506, 6, 65536, 917507, 6, 65537, 917508, 6, 65541, 917509, 6, 196613, 917510, 6, 196609, 917511, 6, 196615, 917517, 6, 0, 917518, 6, 1, 917519, 6, 1, 917520, 6, 2, 917526, 6, 196612, 917527, 6, 196610, 917529, 6, 0, 917530, 6, 131079, 917532, 6, 65539, 983040, 6, 0, 983041, 6, 1, 983042, 6, 131078, 983043, 6, 65537, 983044, 6, 65538, 983048, 6, 4, 983049, 6, 196609, 983050, 6, 7, 983052, 6, 4, 983053, 6, 196614, 983054, 6, 131073, 983055, 6, 131073, 983056, 6, 196618, 983057, 6, 196609, 983058, 6, 8, 983059, 6, 196609, 983060, 6, 7, 983064, 6, 196608, 983065, 6, 196617, 983066, 6, 196613, 983067, 6, 6, 983068, 6, 131079, 1048576, 6, 65536, 1048577, 6, 65537, 1048578, 6, 65537, 1048579, 6, 65537, 1048580, 6, 65538, 1048582, 6, 0, 1048583, 6, 1, 1048584, 6, 131079, 1048586, 6, 131076, 1048587, 6, 1, 1048588, 6, 131079, 1048589, 4, 0, 1048590, 4, 0, 1048591, 4, 0, 1048592, 6, 65539, 1048593, 4, 0, 1048594, 6, 65539, 1048595, 4, 0, 1048596, 6, 131076, 1048597, 6, 1, 1048598, 6, 2, 1048601, 6, 65539, 1048603, 6, 65536, 1048604, 6, 65538, 1114112, 6, 65536, 1114113, 6, 65537, 1114114, 6, 65537, 1114115, 6, 65537, 1114116, 6, 65538, 1114118, 6, 131072, 1114119, 6, 131073, 1114120, 6, 196613, 1114121, 6, 196609, 1114122, 6, 196614, 1114123, 6, 131073, 1114124, 6, 196613, 1114125, 6, 196609, 1114126, 6, 196609, 1114127, 6, 196609, 1114128, 6, 196616, 1114129, 6, 196609, 1114130, 6, 196616, 1114131, 6, 196609, 1114132, 6, 196614, 1114133, 6, 131073, 1114134, 6, 196613, 1114135, 6, 196610, 1114137, 6, 131076, 1114138, 6, 1, 1114139, 6, 131078, 1114140, 6, 65538, 1179648, 6, 65536, 1179649, 6, 65537, 1179650, 6, 65537, 1179651, 6, 65537, 1179652, 6, 65538, 1179673, 6, 65536, 1179674, 6, 65537, 1179675, 6, 65537, 1179676, 6, 65538, 1245184, 6, 65536, 1245185, 6, 65537, 1245186, 6, 65537, 1245187, 6, 65537, 1245188, 6, 131077, 1245189, 6, 1, 1245190, 6, 1, 1245191, 6, 1, 1245192, 6, 1, 1245193, 6, 1, 1245194, 6, 5, 1245195, 6, 196609, 1245196, 6, 196609, 1245197, 6, 196609, 1245198, 6, 6, 1245199, 6, 1, 1245200, 6, 1, 1245201, 6, 1, 1245202, 6, 1, 1245203, 6, 1, 1245204, 6, 1, 1245205, 6, 1, 1245206, 6, 1, 1245207, 6, 1, 1245208, 6, 1, 1245209, 6, 131078, 1245210, 6, 65537, 1245211, 6, 65537, 1245212, 6, 65538, 1310720, 6, 131072, 1310721, 6, 131073, 1310722, 6, 131073, 1310723, 6, 131073, 1310724, 6, 131073, 1310725, 6, 131073, 1310726, 6, 131073, 1310727, 6, 131073, 1310728, 6, 131073, 1310729, 6, 131073, 1310730, 6, 131074, 1310731, 4, 0, 1310732, 4, 0, 1310733, 4, 0, 1310734, 6, 131072, 1310735, 6, 131073, 1310736, 6, 131073, 1310737, 6, 131073, 1310738, 6, 131073, 1310739, 6, 131073, 1310740, 6, 131073, 1310741, 6, 131073, 1310742, 6, 131073, 1310743, 6, 131073, 1310744, 6, 131073, 1310745, 6, 131073, 1310746, 6, 131073, 1310747, 6, 131073, 1310748, 6, 131074 )

[node name="PlayerSpawn" parent="." index="2"]
position = Vector2( 126, 67 )

[node name="Door" parent="." index="3" instance=ExtResource( 2 )]
position = Vector2( 177, 72 )
connection = ExtResource( 3 )
next_level = "res://levels/Level_57.tscn"

[node name="TheSystem" parent="." index="4" instance=ExtResource( 4 )]
position = Vector2( 33, 25 )

[node name="CollisionShape2D" parent="TheSystem/Trigger" index="0"]
position = Vector2( 34, 2 )
shape = SubResource( 1 )

[node name="InvisibleBarrier" type="StaticBody2D" parent="." index="5"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InvisibleBarrier" index="0"]
position = Vector2( 59, 21 )
shape = SubResource( 2 )

[node name="GameEndTrigger" type="Area2D" parent="." index="6"]
position = Vector2( -1, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameEndTrigger" index="0"]
position = Vector2( -10, 38 )
shape = SubResource( 3 )

[node name="TileMap2" parent="." index="7" instance=ExtResource( 5 )]
tile_data = PoolIntArray( 262139, 5, 0, 262140, 5, 0, 262141, 5, 0, 262142, 5, 0, 262143, 5, 0, 327675, 5, 0, 393210, 5, 0, 393211, 5, 0, 458746, 5, 0, 524282, 5, 0, 589819, 5, 0, 589820, 5, 0, 589821, 5, 0, 589822, 5, 0, 589823, 5, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="." index="8"]
position = Vector2( 1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]
position = Vector2( 1, 34 )
rotation = -1.5708
shape = SubResource( 4 )
one_way_collision = true
one_way_collision_margin = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="9"]
anims/gameover = SubResource( 5 )

[node name="ColorRect" type="ColorRect" parent="." index="10"]
margin_left = -23.0
margin_top = -13.0
margin_right = 190.0
margin_bottom = 150.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="GameEndTrigger" to="." method="_on_GameEndTrigger_body_entered"]

[editable path="TheSystem"]
